[gd_scene load_steps=6 format=3 uid="uid://21y06rrokkql"]

[ext_resource type="Script" uid="uid://ba2n4lsmn3p80" path="res://Scenes/platform_yellow.gd" id="1_wqujh"]
[ext_resource type="Texture2D" uid="uid://dumfthq0vcq3f" path="res://Assets/sprites/platforms.png" id="2_drf6y"]
[ext_resource type="PackedScene" uid="uid://6sr8oii5btbu" path="res://Scenes/detect_zone.tscn" id="3_drf6y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5262"]
size = Vector2(32, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_18v68"]
size = Vector2(32, 9)

[node name="Platform_Yellow" type="AnimatableBody2D"]
script = ExtResource("1_wqujh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_drf6y")
region_enabled = true
region_rect = Rect2(16, 32, 32, 9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n5262")
one_way_collision = true

[node name="TimerExpiring" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="DetectZone" parent="." instance=ExtResource("3_drf6y")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectZone"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_18v68")

[node name="TimerBlinking" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1

[node name="TimerDisabled" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="TimerExpiring" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="DetectZone" to="." method="_on_detect_zone_body_entered"]
[connection signal="timeout" from="TimerBlinking" to="." method="_on_timer_blinking_timeout"]
[connection signal="timeout" from="TimerDisabled" to="." method="_on_timer_disabled_timeout"]
